tests/ui/suggestions/method-missing-parentheses.stderr
error[E0615]: attempted to take value of method `collect` on type `std::vec::IntoIter<_>`
  --> $DIR/method-missing-parentheses.rs:2:32
   |
LL |     let _ = vec![].into_iter().collect::<usize>;
   |                                ^^^^^^^ method, not a field
   |
help: use parentheses to call the method
   |
LL |     let _ = vec![].into_iter().collect::<usize>();
   |                                                ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0615`.
